Fixed size of covers.

--- a/themes/bootstrap3/less/cpk.less
+++ b/themes/bootstrap3/less/cpk.less
@@ -296,5 +296,7 @@ a:hover, a:focus, .btn-link:hover, .btn-link:focus {
 img.obalkyknihcz-icon { height: 54px; width: 68px; }
 img.obalkyknihcz-medium { height: 170px; width: 240px; }
 img.obalkyknihcz-thumbnail { height: 27px; width: 36px; }
-
-
+.list-group-item img.obalkyknihcz-icon, .list-group-item img.obalkyknihcz-medium {
+  height: 80px;
+  width: 63px;
+}
